# sada

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  biome.json  package.json  rustfmt.toml  sada.dme  shell.nix  test.dme
.cargo/: config.toml
.github/workflows/: ci.yml
.zed/: settings.json
dmsrc/: sada.dm
sada-client/: Cargo.toml
sada-client/src/: byond.rs  control.rs  lib.rs
sada-common/: Cargo.toml
sada-common/src/: lib.rs
sada-server/: Cargo.toml  config.toml
sada-server/src/: config.rs  control.rs  main.rs  media.rs  session.rs  signaling.rs
sada-web/: biome.json  index.html  package-lock.json  package.json  tsconfig.json
sada-web/src/: config.json  index.css  index.ts  signaling.ts  webrtc.ts
sada-web/src/components/: controls-page.ts  login-page.ts
