[workspace]
resolver = "3"
members = ["sada-server", "sada-client", "sada-common"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
hound = "3.5"
meowtonin = { git = "https://github.com/psychonaut-station/meowtonin", features = ["fast-typechecking"] }
opus = "0.3"
postcard = { version = "1", features = ["use-std"] }
sada-common = { path = "sada-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
str0m = "0.19"
systemstat = "0.2.2"
thiserror = "2"
tokio = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
missing_docs_in_private_items = "deny"
