[package]
name = "sada-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
sada-common = { path = "../sada-common" }
tokio = { version = "1", features = ["full"] }
str0m = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opus = "0.3"
hound = "3.5"
systemstat = "0.2.2"
toml = "0.8"
