[package]
name = "sada-server"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
hound.workspace = true
opus.workspace = true
sada-common.workspace = true
serde.workspace = true
serde_json.workspace = true
str0m.workspace = true
systemstat.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
