[package]
name = "sada-server"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = []
audio_dump = []

[dependencies]
axum.workspace = true
futures-util.workspace = true
hound.workspace = true
opus.workspace = true
postcard.workspace = true
sada-common = { workspace = true, features = ["async"] }
serde.workspace = true
serde_json.workspace = true
str0m.workspace = true
systemstat.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
